fix(sass): reset input, textarea, button — text-align: inherit

--- a/sass/css/_reset.sass
+++ b/sass/css/_reset.sass
@@ -32,6 +32,7 @@ input, textarea, button
   font-size: inherit
   color: inherit
   letter-spacing: inherit
+  text-align: inherit
 
   &:not([type=checkbox]):not([type=radio])
     -webkit-appearance: none
